# bflow

./: .atom-build.json  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
src/: CMakeLists.txt  flow.hpp  flow_result.hpp
src/detail/: flow.cpp  flow.hpp  flow_linked_step.hpp  flow_step_iterator.hpp  flow_steps.hpp  flow_templates_impl.hpp  linked_step.hpp  step_iterator.hpp  steps.hpp  steps_selection.hpp  subflow_step.hpp
src/detail/iteration/: looped.hpp  one_shot.hpp
src/test/: flow_steps_tests.cpp  flow_tests.cpp
